--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 CompositeGrids = "b5136c89-beeb-4521-9139-60d2cac8be56"
+Cuba = "8a292aeb-7a57-582c-b821-06e4c11590b1"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 ElectronGas = "8c98e03e-8755-48b1-a5ef-1e2e7812a7c9"
