add code for effective mass

--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ FeynmanDiagram = "e424a512-dbd9-41ff-9883-094748823e72"
 Lehmann = "95bf888a-8996-4655-9f35-1c0506bdfefe"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MCIntegration = "ea1e2de9-7db7-4b42-91ee-0cd1bf6df167"
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
