--- a/Project.toml
+++ b/Project.toml
@@ -21,3 +21,6 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
+
+[compat]
+CompositeGrids = "< 0.1.2"
