--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,8 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 ElectronGas = "8c98e03e-8755-48b1-a5ef-1e2e7812a7c9"
 FeynmanDiagram = "e424a512-dbd9-41ff-9883-094748823e72"
+FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Lehmann = "95bf888a-8996-4655-9f35-1c0506bdfefe"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MCIntegration = "ea1e2de9-7db7-4b42-91ee-0cd1bf6df167"
@@ -18,9 +20,11 @@ Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 CompositeGrids = "< 0.1.2"
