--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+CompositeGrids = "b5136c89-beeb-4521-9139-60d2cac8be56"
 FeynmanDiagram = "e424a512-dbd9-41ff-9883-094748823e72"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 Lehmann = "95bf888a-8996-4655-9f35-1c0506bdfefe"
