--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - "1.6"
+          - "1.9"
           - "nightly"
         os:
           - ubuntu-latest
@@ -26,6 +26,13 @@ jobs:
           - x64
           - x86
     steps:
+      - uses: actions/checkout@v1
+      - name: Setup python
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: ${{ matrix.architecture }}
+      - run: python -m pip install --user numpy
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
