--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,6 @@ FeynmanDiagram = "e424a512-dbd9-41ff-9883-094748823e72"
 Lehmann = "95bf888a-8996-4655-9f35-1c0506bdfefe"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MCIntegration = "ea1e2de9-7db7-4b42-91ee-0cd1bf6df167"
-MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -21,3 +20,25 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
+
+[compat]
+AbstractTrees = "0.3, 0.4"
+Lehmann = "0.2"
+Parameters = "0.12"
+PyCall = "1"
+StaticArrays = "1"
+julia = "1.6"
+
+[compat]
+CompositeGrids = "0.0, 0.1"
+DataFrames = "1"
+Cuba = "2"
+Lehmann = "0.1, 0.2"
+Parameters = "0.12"
+TaylorSeries = "0"
+FeynmanDiagram = "0"
+ElectronGas = "0"
+Measurements = "2"
+MCIntegration = "0"
+StaticArrays = "1"
+julia = "1.6"
