Make ParaMC explicitly mutable, add order to paraid, and add constructor for ParaMC from short string representation

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 CompositeGrids = "b5136c89-beeb-4521-9139-60d2cac8be56"
 Cuba = "8a292aeb-7a57-582c-b821-06e4c11590b1"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 ElectronGas = "8c98e03e-8755-48b1-a5ef-1e2e7812a7c9"
 FeynmanDiagram = "e424a512-dbd9-41ff-9883-094748823e72"
