--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 CompositeGrids = "0.0, 0.1"
 Cuba = "2"
 DataFrames = "1"
+DataStructures = "0.18"
 DelimitedFiles = "1"
 ElectronGas = "0.2"
 FeynmanDiagram = "0.2"
