CompatHelper: bump compat for MCIntegration to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ DelimitedFiles = "1"
 ElectronGas = "0.2"
 FeynmanDiagram = "0.2"
 Lehmann = "0.1, 0.2"
-MCIntegration = "0.3"
+MCIntegration = "0.3, 0.4"
 Measurements = "2.9"
 Parameters = "0.12"
 StaticArrays = "1"
