--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ DataFrames = "1"
 DataStructures = "0.18"
 DelimitedFiles = "1"
 ElectronGas = "0.2"
-FeynmanDiagram = "0.2"
+FeynmanDiagram = "0.2, 1"
 JLD2 = "0.4"
 Lehmann = "0.1, 0.2"
 MCIntegration = "0.4"
