CompatHelper: bump compat for TaylorSeries to 0.17, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -36,5 +36,5 @@ MCIntegration = "0.4"
 Measurements = "2.9"
 Parameters = "0.12"
 StaticArrays = "1"
-TaylorSeries = "0.15"
+TaylorSeries = "0.15, 0.17"
 julia = "1.6"
